added updated UX case study for Spaceship

--- a/uxuidesign.html
+++ b/uxuidesign.html
@@ -82,14 +82,14 @@
                     people from all ages and classes of society to start investing. People are facing issues when it comes to identifying the cost, withdraws and investments within the existing 
                     app. This is leading to customers receiving headaches when it comes to calculating their taxes. This case study intends to attempts those problems.</p>
                 <div class="buttonContainer">
-                   <a href="/images/Spaceship/Spaceship - UX Case Study - New.pdf" download><button>view case study</button></a> 
+                   <a href="/images/Spaceship/UX case study - brand new.pdf" download><button>view case study</button></a> 
                 </div>
             </div>
             <div class="profile">
                 <img src="/images/Spaceship/220322---Octothorp-Image-01.png" alt="profile">
             </div>
             <div class="buttonContainerMobile">
-                <a href="/images/Spaceship/Spaceship - UX Case Study - New.pdf " download><button>view case study</button></a> 
+                <a href="/images/Spaceship/UX case study - brand new.pdf" download><button>view case study</button></a> 
             </div>
         </div>
     </section>
