--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -28,7 +28,7 @@
                             <li><a class = 'portfolioToggleFont' id = 'portfolioToggleFontUXUI' href="/uxuidesign.html">UX/UI Design</a></li>
                             <li><a class = 'portfolioToggleFont' id = 'portfolioToggleFontGraphicDesign' href="/graphicdesign.html">Graphic Design</a></li>
                             <li><a class = 'portfolioToggleFont'  id = 'portfolioToggleFontArchitecture' href="/architecture.html">Architecture</a></li>
-                            <li><a class = 'portfolioToggleFont' id = 'portfolioToggleFontDigitalArtwork' href="/digitialartwork.html">Digital Artwork</a></li>
+                            <li><a class = 'portfolioToggleFont' id = 'portfolioToggleFontDigitalArtwork' href="https://www.instagram.com/thomasemersonartwork/" target="_blank" ">Digital Artwork</a></li>
                             <li><a class = 'portfolioToggleFont' id = 'portfolioToggleFontFrontendDevelopment' href="/frontenddevelopment.html">Frontend Development</a></li>
                         </ul>
                     </li>
