reflective journal wip

--- a/architecture.html
+++ b/architecture.html
@@ -125,7 +125,7 @@
                 <img src="/images/Architecture/Epsilon journal/cover.png" alt="profile">
             </div>
             <div class="buttonContainerMobile">
-                <a href="/images/Architecture/995854_Emerson_Thomas_ABPL30041_T10_TASK3_ORIGINAL-1.pdf" download><button>view journal</button></a> 
+                <a href="/reflectivejournal.html"><button>view journal</button></a> 
             </div>
         </div>
     </section>
