--- a/reflectivejournal.html
+++ b/reflectivejournal.html
@@ -76,7 +76,7 @@
     <section class="sectionOne">
         <div class="titleContainer">
             <div class="title">
-                <h1>diagram of thematic links</h1>
+                <h1>thematic diagram</h1>
             </div>
         </div>
         <div class="diagramContainer">
@@ -87,7 +87,7 @@
     <section class="sectionTwo">
         <div class="titleContainer">
             <div class="title">
-                <h1>thematic research</h1>
+                <h1>thematic themes</h1>
             </div>
         </div>
         <div class="diagramContainer">
