--- a/reflectivejournal.html
+++ b/reflectivejournal.html
@@ -76,6 +76,17 @@
     <section class="sectionOne">
         <div class="titleContainer">
             <div class="title">
+                <h1>chronological interest mapping</h1>
+            </div>
+        </div>
+        <div class="diagramContainer">
+            <img src="/images/Architecture/Epsilon journal/chronological interest mapping.svg" alt="">
+        </div>
+    </section>
+
+    <section class="sectionOne">
+        <div class="titleContainer">
+            <div class="title">
                 <h1>thematic diagram</h1>
             </div>
         </div>
