--- a/frontenddevelopment.html
+++ b/frontenddevelopment.html
@@ -49,9 +49,9 @@
 
             <div class="title">
                 <ul>
-                    <li><h1 class = "titleOutline"><span>Coding. </span></h1></li>
-                    <li><h1 class = "titleCenter"><span></span>Coding.</h1></li>
-                    <li><h1 class = "titleOutline"><span>Coding.</span></h1></li>
+                    <li><h1 class = "titleOutline"><span>Frontend</span>  development. </h1></li>
+                    <li><h1 class = "titleCenter"><span>Frontend</span> development.</h1> </li>
+                    <li><h1 class = "titleOutline"><span>Frontend</span> development.</h1></li>
                 </ul>
             </div>
 
