--- a/reflectivejournal.html
+++ b/reflectivejournal.html
@@ -51,7 +51,7 @@
                 <ul>
                     <li><h1 class = "titleOutline"><span>Reflective journal.</span></h1></li>
                     <li><h1 class = "titleCenter">Reflective <span>journal.</span></h1></li>
-                    <li><h1 class = "titleOutline"><span>Feflective journal.</span></h1></li>
+                    <li><h1 class = "titleOutline"><span>Reflective journal.</span></h1></li>
                 </ul>
             </div>
 
@@ -81,6 +81,17 @@
         </div>
         <div class="diagramContainer">
             <img src="/images/Architecture/Epsilon journal/chronological interest mapping.svg" alt="">
+        </div>
+    </section>
+
+    <section class="sectionOne_02">
+        <div class="titleContainer">
+            <div class="title">
+                <h1>non-hierarchical subject mapping</h1>
+            </div>
+        </div>
+        <div class="diagramContainer">
+            <img src="/images/Architecture/Epsilon journal/non-hierarchicial subjet mapping.svg" alt="">
         </div>
     </section>
 
@@ -120,6 +131,16 @@
             <button class="multiGenerational">view theme</button>
             <p class = 'multiGenerationalP'>The idea of family and multigenerational living has always been interesting for me. With a growing surge of more people becoming homeless and the lack of opportunity for people to get their foot in the market, something needs to be done with Australia’s economy to combat this issue. One of which is by encouraging people to live with their families/friends and to avoid owning multiple properties for financial gain. Therefore, I made sure it was important for me to explore this idea throughout my architectural studies. As someone who has a strong relationship with their friends/family, exploring multigenerational living is important. I have explored many ways architecture can change over time in past works and continue to seek new methods of transforming architecture to be more flexible and adaptable as people age. Some of which have been achieved using bifold doors, curtains and planning fixed rooms ahead to change over time into different occupations. </p>
            </div>
+        </div>
+    </section>
+
+    <section class="sectionOne">
+        <div class="titleContainer">
+            <div class="title">
+                <h1>thematic research</h1>
+            </div>
+        </div>
+        <div class="diagramContainer">
         </div>
     </section>
 
