--- a/reflectivejournal.html
+++ b/reflectivejournal.html
@@ -133,16 +133,56 @@
            </div>
         </div>
     </section>
+    
+    <section class="sectionThree">
 
-    <section class="sectionOne">
         <div class="titleContainer">
             <div class="title">
                 <h1>thematic research</h1>
+                <h2>La Vecindad - Adamo Faiden Architects - A precedent analysis</h2>
+                <p>I was provided with the precedent by Adamo Faiden’s project, La Vecindad, a multi-duplex project situated in the capital city of Argentina, Buenos Aires. This project gave me an in-depth insight behind what a family, dense project was like which opened my interest to explore the theme of multigeneration for my final project. The notion behind the project attempts to argue that density and nature need to work together for a contemporary city to thrive and succeed in. This idea of combing nature and a contemporary setting is important to consider for future projects. 
+                </p>
+            </div>
+            <div class="profile">
+                <img src="/images/Architecture/Epsilon journal/Adamo faiden/03_-_javier_agustin_rojas_la_vecindad_IMG_7598_low_v3.jpg" alt="profile">
             </div>
         </div>
-        <div class="diagramContainer">
+        <div class="titleContainerTwo">
+            <div class="title">
+                <p>The plans themself played a huge role in the generation of possible outcomes throughout the semester. The living room uses an open plan which helps to bring a large amount of space to the room which works well in the context of a family. From previous experiences and studies, open space is considered valuable and useful to users due to the ability to become more flexibile and adaptable within the space to move furniture. In addition, curtain glass windows can be found on either side to bring out cross-ventilation which is key for efficient cross-ventilation. This helps add to the idea of passive incoming falling under the sustainability genre. Concrete, steel and metal were used throughout the building. Since these materials are familiar  within the construction industry, helped add to a reduction for waste and cost. 
+                </p>
+            </div>
+            <div class="profile">
+                <img src="/images/Architecture/Epsilon journal/Adamo faiden/02_floor_plans_2_web_(1) (1).jpg">
+            </div>
         </div>
+
     </section>
+
+    <section class="sectionThree">
+
+        <div class="titleContainer">
+            <div class="title">
+                <h2>Nemausus - Jean Nouvel - A precedent analysis</h2>
+                <p>Upon reviewing Adamo Faiden's building, I wanted to get a deeper insight behind the importance of a big room and whether or not a big room correlated to the space being considered 'good' by those that used it. For Nemasus, having a generous amount of space was considered an aesthetic precondition. In this project, basic but forgotten principles have been resurrected and clearly applied. Norms of social housing have been dropped in a bid to overcome the fate that leads to this churning out of apartments, all virtually identical, that only spread sadness - the sadness of a social condition that tends to confuse person and number, norm and quality, model and identity.
+                </p>
+            </div>
+            <div class="profile">
+                <img src="/images/Architecture/Epsilon journal/Jean Nouvel/6ebdd27b740bbb70b63b2170f2bd916f.png" alt="profile">
+            </div>
+        </div>
+        <div class="titleContainerTwo">
+            <div class="title">
+                <p>The word Nemausus means housing of the simplest kind. Nouvel was determined to create a structure as cheap as possible whilst also considering the use of giving residents large amounts of space. Recycled, cheap materials such as metals, re-used doors and rails were used as the formation behind the uniqueness within the project. Again, the project consists of a mixture of duplex and triplex townhouses (similar to Adamo Faiden) which ultimately became the main typology priority within my studies for the epsilon subject. 
+                </p>
+            </div>
+            <div class="profile">
+                <img src="/images/Architecture/Epsilon journal/Jean Nouvel/images.jpg">
+            </div>
+        </div>
+        
+    </section>
+
 
     <footer>
         <div class="logo">
