--- a/reflectivejournal.html
+++ b/reflectivejournal.html
@@ -164,7 +164,7 @@
         <div class="titleContainer">
             <div class="title">
                 <h2>Nemausus - Jean Nouvel - A precedent analysis</h2>
-                <p>Upon reviewing Adamo Faiden's building, I wanted to get a deeper insight behind the importance of a big room and whether or not a big room correlated to the space being considered 'good' by those that used it. For Nemasus, having a generous amount of space was considered an aesthetic precondition. In this project, basic but forgotten principles have been resurrected and clearly applied. Norms of social housing have been dropped in a bid to overcome the fate that leads to this churning out of apartments, all virtually identical, that only spread sadness - the sadness of a social condition that tends to confuse person and number, norm and quality, model and identity.
+                <p>Upon reviewing Adamo Faiden's building, I wanted to get a deeper insight behind the importance of a big room and whether or not a big room correlated to the space being considered 'good' by those that used it. For Nemasus, having a generous amount of space was considered a necessity for many people, particuarly those living under social housing at the time of inception. In this project, simple but forgotten elements were reintroduced applied to the building. Ideas of social housing were essentially challenged as a means of overcoming the fate that many pre-existing residents faced from their existing living experiences. Cramped, underfunded and ultimately resulting to a dangerous environment. This project challenged this by focusing on creating 'big' and 'open' spaces for residents to thrive in. 
                 </p>
             </div>
             <div class="profile">
@@ -173,11 +173,35 @@
         </div>
         <div class="titleContainerTwo">
             <div class="title">
-                <p>The word Nemausus means housing of the simplest kind. Nouvel was determined to create a structure as cheap as possible whilst also considering the use of giving residents large amounts of space. Recycled, cheap materials such as metals, re-used doors and rails were used as the formation behind the uniqueness within the project. Again, the project consists of a mixture of duplex and triplex townhouses (similar to Adamo Faiden) which ultimately became the main typology priority within my studies for the epsilon subject. 
+                <p>The word Nemausus means housing of the simplest kind. Nouvel was determined to create a structure as cheap as possible whilst also considering the use of giving residents large amounts of space. Recycled, cheap materials such as metals, re-used doors and rails were used as the formation behind the uniqueness within the project. Again, the project consists of a mixture of duplex and triplex townhouses (similar to Adamo Faiden) which ultimately became the main typology form I focused on for the remaining weeks of my studies.
                 </p>
             </div>
             <div class="profile">
                 <img src="/images/Architecture/Epsilon journal/Jean Nouvel/images.jpg">
+            </div>
+        </div>
+        
+    </section>
+
+    <section class="sectionThree">
+
+        <div class="titleContainer">
+            <div class="title">
+                <h2>Brunstorp / Arrhov Frick Arkitektkontor - A precedent analysis</h2>
+                <p>Continuing on from the precedent studies, I came across this building during class and was fascinated by the resemblence with the other precedents I was studying at the time. Not only did it offer open floor plans, big space but had a very familar floor plan arrangement to the past 2 projects which were heavily looked at. In addition, the materials which included concrete, steel and metal were used as too, with the previous examples. 
+                </p>
+            </div>
+            <div class="profile">
+                <img src="/images/Architecture/Epsilon journal/Arrhov Frick/ARRHOV_FRICK_BRUNSTORP_07.jpg" alt="profile">
+            </div>
+        </div>
+        <div class="titleContainerTwo">
+            <div class="title">
+                <p>The project is situated within a region in Sweden called Brunstorp with the intension of challenging building methods used in today's Swedish building industries. The main intention to this (from Arrhov's perspective) was that housing costs were becoming too expesnive due to the complex nature of tasks architects were wanting contractors to achieve. Rather, Arrhov took the more minimal approach but utilising cost-effective materials as a means of allowing for 90 housing units to house those who are struggling to make a living. Again, the use of open space, allowed for the living experience to be a high standard when compared to traditional social housing projects in today's world. This, again is why I wanted to explore this notion right through into my final project. In order to improve sustainability, technology was used as a tool to generate pre-cast elements which were delivered on site via trucks. This way, insitu concrete was not required allowing for the possibilities for mistakes or waste to signifcantly decrease. Again, an important factor which was considered with my ideas. 
+                </p>
+            </div>
+            <div class="profile">
+                <img src="/images/Architecture/Epsilon journal/Arrhov Frick/FEATURE-_ARRHOV_FRICK_BRUNSTORP_01.jpg">
             </div>
         </div>
         
