--- a/architecture.html
+++ b/architecture.html
@@ -122,7 +122,7 @@
                 </div>
             </div>
             <div class="profile">
-                <img src="/images/Architecture/Epsilon journal/cover.png" alt="profile">
+                <img src="/images/Architecture/Epsilon journal/Design Statement/220604 - Render 02 final cover.png" alt="profile">
             </div>
             <div class="buttonContainerMobile">
                 <a href="/reflectivejournal.html"><button>view journal</button></a> 
