--- a/reflectivejournal.html
+++ b/reflectivejournal.html
@@ -188,8 +188,8 @@
         <div class="titleContainer">
             <div class="title">
                 <h2>Brunstorp / Arrhov Frick Arkitektkontor - A precedent analysis</h2>
-                <p>Continuing on from the precedent studies, I came across this building during class and was fascinated by the resemblence with the other precedents I was studying at the time. Not only did it offer open floor plans, big space but had a very familar floor plan arrangement to the past 2 projects which were heavily looked at. In addition, the materials which included concrete, steel and metal were used as too, with the previous examples. 
-                </p>
+                <p>Continuing on from the precedent studies, I came across this building during class and was fascinated by the resemblence with the other precedents I was studying at the time. The elements which gained my attention to explore were the cost-effective construction methods used to develop this structure in order to house 90 generous units. This was due to the use of pre-cast concrete elements which helped  increase construction times and costs for the contractor. In addition, pre-cast elements ensured that insitu concrete would not be required for certain areas which would've helped to decrease waste and therefore improve sustainability. 
+            </p>
             </div>
             <div class="profile">
                 <img src="/images/Architecture/Epsilon journal/Arrhov Frick/ARRHOV_FRICK_BRUNSTORP_07.jpg" alt="profile">
@@ -201,11 +201,35 @@
                 </p>
             </div>
             <div class="profile">
-                <img src="/images/Architecture/Epsilon journal/Arrhov Frick/FEATURE-_ARRHOV_FRICK_BRUNSTORP_01.jpg">
+                <img src="/images/Architecture/Epsilon journal/Arrhov Frick/ARRHOV_FRICK_BRUNSTORP_08.jpg">
             </div>
         </div>
         
     </section>
+
+    <section class="sectionThree">
+
+        <div class="titleContainer">
+            <div class="title">
+                <h1>design statement</h1>
+                <h2>The Burrows - a family living project located in Brunswick West</h2>
+                <p>How can multi-level-unit dwellings cater to the needs of a changing multicultural community? How can they evolve overtime and adapt to changes in transitional generational housing within the Brunswick West community? 
+                <br>
+                The solution is to create a co-living multigenerational project using flexible building arrangements to adapt to the needs of residents as they age and as their family structures shift overtime. The design challenges traditional apartment arrangements in order to meet the needs of developing trends in generational living. This may be achieved through the use of curtains, transformative facades, generous open plans, or multipurpose rooms suitable for different occupations. 
+                <br>
+                The project is targeted towards large families and/or couples looking to start a family in the future. The design will also support co-housing arrangement, which an increasing amount of people are pursuing as a means of building stronger relationships with people within their community. The design will complement existing aspects of the Brunswick West neighbourhood, bringing natural and urban elements together as a way of making the commercialised site more domestic. 
+                <br>
+                The project intends to also solve housing issues Melbourne is currently facing with the rise of inflation and living costs. This includes encouraging people to live with families, decreasing the surging demand in property purchases and encouraging people to live in one area rather than owning multiple properties throughout the city.
+                </p>
+            </div>
+            <div class="profile">
+                <img src="/images/Architecture/Epsilon journal/Design Statement/220604 - Render 02 final.png" alt="profile">
+            </div>
+        </div>
+
+    </section>
+
+    
 
 
     <footer>
