added contact backend service

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
     </main>
 
     <section class="sectionOne">
-        <form>
+        <form action="https://formsubmit.co/83db4946ecda179c7b52c300e81fe8f4" method="POST">
             <div class="nameContainer">
                 <h1 class = 'nameTitle'>Your name: </h1>
                 <input id="name" name="name" type="text" placeholder="Please enter your name." onkeyup="isEmpty()"/>
@@ -91,11 +91,11 @@
 
             <div class="enquiryContainer">
                 <h1 class = 'enquiryTitle'>Enquiry Details: </h1>
-                <textarea placeholder="Please enter your enquiries." onkeyup="isEmpty()"></textarea>
+                <input id="enquiries" name="enquiries" type="text" placeholder="Please enter your enquiries." onkeyup="isEmpty()"/>
             </div>
 
             <div class="submitContainer">
-                <button class = "contactButtonTwo" type = "button">Send message</button>
+                <button class = "contactButtonTwo" type = "submit">Send message</button>
             </div>
         </form>
     </section>
