contact required forms added

--- a/contact.html
+++ b/contact.html
@@ -76,22 +76,22 @@
         <form action="https://formsubmit.co/83db4946ecda179c7b52c300e81fe8f4" method="POST">
             <div class="nameContainer">
                 <h1 class = 'nameTitle'>Your name: </h1>
-                <input id="name" name="name" type="text" placeholder="Please enter your name." onkeyup="isEmpty()"/>
+                <input id="name" name="name" type="text" placeholder="Please enter your name." onkeyup="isEmpty()" required/>
             </div>
 
             <div class="emailContainer">
                 <h1 class = 'emailTitle'>Email: </h1>
-                <input id="email" name="email" type="text" placeholder="Please enter your email." onkeyup="isEmpty()"/>
+                <input id="email" name="email" type="text" placeholder="Please enter your email." onkeyup="isEmpty()" required/>
             </div>
     
             <div class="companyContainer">
                 <h1 class = 'companyTitle'>Company: </h1>
-                <input id="company" name="company" type="text" placeholder="Please enter your business name." onkeyup="isEmpty()"/>
+                <input id="company" name="company" type="text" placeholder="Please enter your business name." onkeyup="isEmpty()" required/>
             </div>
 
             <div class="enquiryContainer">
                 <h1 class = 'enquiryTitle'>Enquiry Details: </h1>
-                <input id="enquiries" name="enquiries" type="text" placeholder="Please enter your enquiries." onkeyup="isEmpty()"/>
+                <input id="enquiries" name="enquiries" type="text" placeholder="Please enter your enquiries." onkeyup="isEmpty()" required/>
             </div>
 
             <div class="submitContainer">
