--- a/frontenddevelopment.html
+++ b/frontenddevelopment.html
@@ -36,7 +36,7 @@
                     <li><a class = 'navResume' href="/images/220225 - Resume 2022.pdf" download>resume</a></li>
                 </ul>
                 <div class="contactButtonContainer">
-                    <a href="https://www.linkedin.com/in/thomas-emerson-93262b17a/ " target="_blank"><button class="contactButton">contact</button></a>
+                    <a href="/contact.html"><button class="contactButton">contact</button></a>
                 </div>
             </div>
             <div class="mobileTrigger">
