--- a/graphicdesign.html
+++ b/graphicdesign.html
@@ -36,7 +36,7 @@
                     <li><a class = 'navResume' href="/images/220225 - Resume 2022.pdf" download>resume</a></li>
                 </ul>
                 <div class="contactButtonContainer">
-                    <a href="https://www.linkedin.com/in/thomas-emerson-93262b17a/ " target="_blank"><button class="contactButton">contact</button></a>
+                    <a href="/contact.html"><button class="contactButton">contact</button></a>
                 </div>
             </div>
             <div class="mobileTrigger">
@@ -84,7 +84,7 @@
                 </div>
             </div>
             <div class="profile">
-                <img src="/images/220322---Octothorp-Image-01-transparent.png" alt="profile">
+                <img src="/images/Graphic Design/octothorp/gifs/220719---gif-test.gif" alt="profile">
             </div>
             <div class="buttonContainerMobile">
                 <a href="/octothorpmedia.html"><button>view designs</button></a> 
