--- a/uxuidesign.html
+++ b/uxuidesign.html
@@ -77,7 +77,7 @@
 
         <div class="titleContainer">
             <div class="title">
-                <h1>spaceship ux case study</h1>
+                <h1> ux case study</h1>
                 <p>Spaceship is a micro investing and super fund company founded in Sydney and provides mutual funds for 
                     people from all ages and classes of society to start investing. People are facing issues when it comes to identifying the cost, withdraws and investments within the existing 
                     app. This is leading to customers receiving headaches when it comes to calculating their taxes. This case study intends to attempts those problems.</p>
@@ -86,7 +86,7 @@
                 </div>
             </div>
             <div class="profile">
-                <img src="/images/Spaceship/220322---Octothorp-Image-01.png" alt="profile">
+                <img src="/images/Spaceship/220322---UX_Case_Study_GIF.gif" alt="profile">
             </div>
             <div class="buttonContainerMobile">
                 <a href="/images/Spaceship/UX case study - new case study.pdf" download><button>view case study</button></a> 
