--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Emerson Visuals</title>
     <link rel="stylesheet" href="/styles/main.css">
     <link rel="preload" href="assets/fonts/xxx.woff" as="font" type="font/woff" crossorigin>
-    <style>@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');</style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 <body>
     
