--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                     </div>
                     <div class="details">
                         <button class = 'myWork'>my work</button>
-                        <a href="/about.html"><button class = 'letschatButton'>lets chat</button></a>
+                        <a href="/contact.html"><button class = 'letschatButton'>let's chat</button></a>
                     </div>
                 </div>
                 <div class="boxTwo">
